[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/thepalaceking.png" type="Texture" id=1]
[ext_resource path="res://entities/PalaceKing.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="PalaceKing" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 1

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sight" type="Area2D" parent="."]

[node name="Collision" type="CollisionPolygon2D" parent="Sight"]
rotation = -1.57079
polygon = PoolVector2Array( -16, -8, 16, -8, 128, 64, 128, 384, -128, 384, -128, 64 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
